fixing alignment and layout issues

--- a/src/web/src/css/components/layout.css
+++ b/src/web/src/css/components/layout.css
@@ -3,6 +3,17 @@
  * Layout
  */
 
+.site:not(.home, .code-section) {
+
+  & .page-content {
+    padding: 48px 16px;
+
+    @media (--viewport-md) {
+      padding: 48px 0;
+    }
+  }
+}
+
 .home {
   & .page-content {
     margin: 0;
